--- a/www/index.html
+++ b/www/index.html
@@ -24,97 +24,100 @@
         Local-first event streaming for hackers & tinkerers
       </p>
 
-      <!-- Query Section -->
-      <div class="query-section">
-        <terminal-panel
-          id="query-terminal"
-          title="Query the Event Store"
-        >
-          <div id="query-output"></div>
-        </terminal-panel>
-      </div>
-
-      <div class="input-store-row">
-        <!-- Input commands showing executed commands -->
-        <div class="console">
-          <terminal-panel>
-            <terminal-line
-              prompt="$"
-              command='"buy groceries"'
-              pipe="|"
-              topic=".append goal"
-            ></terminal-line>
-            <terminal-line
-              prompt="$"
-              command='"quick note about meeting"'
-              pipe="|"
-              topic=".append notes"
-            ></terminal-line>
-            <terminal-line
-              prompt="$"
-              command='"submit TPS report"'
-              pipe="|"
-              topic=".append notes"
-            ></terminal-line>
-            <terminal-line
-              prompt="$"
-              command='"learn cross.stream"'
-              pipe="|"
-              topic=".append goal"
-            ></terminal-line>
-            <terminal-line
-              prompt="$"
-              command='"review project docs"'
-              pipe="|"
-              topic=".append notes"
-            ></terminal-line>
+      <!-- Demo Section: Query + Input/Store -->
+      <div class="demo-section">
+        <!-- Query Section -->
+        <div class="query-section">
+          <terminal-panel
+            id="query-terminal"
+            title="Query the Event Store"
+          >
+            <div id="query-output"></div>
           </terminal-panel>
         </div>
 
-        <!-- Store with event bubbles -->
-        <div class="store">
-          <terminal-panel>
-            <terminal-line
-              prompt="$"
-              command="xs serve (xs-addr)"
-            ></terminal-line>
-            <div
-              class="embedded-component"
-              data-variant="store"
-              id="events-container"
-            >
-              <event-bubble
-                type="goal"
-                content="buy groceries"
-                event-id="03d4q1o70y6ek0ig8hwy9q00n"
+        <div class="input-store-row">
+          <!-- Input commands showing executed commands -->
+          <div class="console">
+            <terminal-panel>
+              <terminal-line
+                prompt="$"
+                command='"buy groceries"'
+                pipe="|"
+                topic=".append goal"
+              ></terminal-line>
+              <terminal-line
+                prompt="$"
+                command='"quick note about meeting"'
+                pipe="|"
+                topic=".append notes"
+              ></terminal-line>
+              <terminal-line
+                prompt="$"
+                command='"submit TPS report"'
+                pipe="|"
+                topic=".append notes"
+              ></terminal-line>
+              <terminal-line
+                prompt="$"
+                command='"learn cross.stream"'
+                pipe="|"
+                topic=".append goal"
+              ></terminal-line>
+              <terminal-line
+                prompt="$"
+                command='"review project docs"'
+                pipe="|"
+                topic=".append notes"
+              ></terminal-line>
+            </terminal-panel>
+          </div>
+
+          <!-- Store with event bubbles -->
+          <div class="store">
+            <terminal-panel>
+              <terminal-line
+                prompt="$"
+                command="xs serve (xs-addr)"
+              ></terminal-line>
+              <div
+                class="embedded-component"
+                data-variant="store"
+                id="events-container"
               >
-              </event-bubble>
-              <event-bubble
-                type="notes"
-                content="quick note about meeting"
-                event-id="03d4q1qhbiv09ovtuhokw5yxv"
-              >
-              </event-bubble>
-              <event-bubble
-                type="notes"
-                content="submit TPS report"
-                event-id="03d4qbrxizqgav09m7hicksb0"
-              >
-              </event-bubble>
-              <event-bubble
-                type="goal"
-                content="learn cross.stream"
-                event-id="03d4qic9vqkve1krajjtlbavd"
-              >
-              </event-bubble>
-              <event-bubble
-                type="notes"
-                content="review project docs"
-                event-id="03d4qjwnhwudlfyg1ygemmt7b"
-              >
-              </event-bubble>
-            </div>
-          </terminal-panel>
+                <event-bubble
+                  type="goal"
+                  content="buy groceries"
+                  event-id="03d4q1o70y6ek0ig8hwy9q00n"
+                >
+                </event-bubble>
+                <event-bubble
+                  type="notes"
+                  content="quick note about meeting"
+                  event-id="03d4q1qhbiv09ovtuhokw5yxv"
+                >
+                </event-bubble>
+                <event-bubble
+                  type="notes"
+                  content="submit TPS report"
+                  event-id="03d4qbrxizqgav09m7hicksb0"
+                >
+                </event-bubble>
+                <event-bubble
+                  type="goal"
+                  content="learn cross.stream"
+                  event-id="03d4qic9vqkve1krajjtlbavd"
+                >
+                </event-bubble>
+                <event-bubble
+                  type="notes"
+                  content="review project docs"
+                  event-id="03d4qjwnhwudlfyg1ygemmt7b"
+                >
+                </event-bubble>
+              </div>
+            </terminal-panel>
+          </div>
         </div>
       </div>
 
@@ -123,17 +126,6 @@
         and wire up anything—from Arduino sensors to MCP servers—without cloud
         lock-in.
       </p>
-
-      <div class="cta-buttons">
-        <a
-          href="https://github.com/cablehead/xs"
-          class="cta-button primary"
-        >Get Started</a>
-        <a
-          href="https://cablehead.github.io/xs/"
-          class="cta-button secondary"
-        >Documentation</a>
-      </div>
 
       <!-- Core Ideas Section -->
       <div class="features-grid">
@@ -181,29 +173,24 @@
         </div>
       </div>
 
-      <!-- Nushell Quickstart Section -->
-      <div class="code-block">
-        <terminal-panel title="Hello world">
-          <terminal-line
-            prompt="$"
-            command="xs serve ./store"
-          ></terminal-line>
-          <terminal-line
-            prompt="$"
-            command='"Hello, world!"'
-            pipe="|"
-            topic=".append greeting"
-          ></terminal-line>
-          <terminal-line prompt="$" command=".cat --follow"></terminal-line>
-        </terminal-panel>
+      <div class="cta-buttons">
+        <a
+          href="https://cablehead.github.io/xs/getting-started/installation/"
+          class="cta-button primary"
+        >Get Started</a>
+        <a
+          href="https://cablehead.github.io/xs/"
+          class="cta-button secondary"
+        >Documentation</a>
+        <a
+          href="https://github.com/cablehead/xs"
+          class="cta-button secondary"
+        >GitHub</a>
       </div>
     </main>
 
     <!-- Footer -->
     <footer class="footer">
-      <p class="footer-tagline">
-        <strong>Built for people who prefer building over configuring.</strong>
-      </p>
       <div class="footer-links">
         <a href="https://github.com/cablehead/xs">GitHub</a>
         <a href="https://cablehead.github.io/xs/">Docs</a>
