--- a/www/index.html
+++ b/www/index.html
@@ -19,7 +19,13 @@
     <script type="module" src="components/feature-card.js"></script>
   </head>
   <body>
-    <main>
+    <!-- Background Layers -->
+    <div class="background-layer">
+      <img src="assets/splash.gif" alt="" class="background-gif">
+    </div>
+    <div class="background-overlay"></div>
+
+    <main style="margin-top: 20vh">
       <h1><cross-stream-title></cross-stream-title></h1>
       <p class="tagline">
         Local-first event streaming for hackers & tinkerers
