--- a/www/index.html
+++ b/www/index.html
@@ -100,30 +100,35 @@
                   type="goal"
                   content="buy groceries"
                   event-id="03d4q1o70y6ek0ig8hwy9q00n"
+                  frame-id="03egou0geu62jz78r2smufms2"
                 >
                 </event-bubble>
                 <event-bubble
                   type="notes"
                   content="quick note about meeting"
                   event-id="03d4q1qhbiv09ovtuhokw5yxv"
+                  frame-id="03ehpx4n8q5bvz92k3wtnlem7"
                 >
                 </event-bubble>
                 <event-bubble
                   type="notes"
                   content="submit TPS report"
                   event-id="03d4qbrxizqgav09m7hicksb0"
+                  frame-id="03ejkr9z2m8xwv45n7qstpkm9"
                 >
                 </event-bubble>
                 <event-bubble
                   type="goal"
                   content="learn cross.stream"
                   event-id="03d4qic9vqkve1krajjtlbavd"
+                  frame-id="03elmb5w7p3qxt68s9vuwron2"
                 >
                 </event-bubble>
                 <event-bubble
                   type="notes"
                   content="review project docs"
                   event-id="03d4qjwnhwudlfyg1ygemmt7b"
+                  frame-id="03enmc8v4r6zyu79t1xvwspn4"
                 >
                 </event-bubble>
               </div>
