--- a/www/index.html
+++ b/www/index.html
@@ -10,6 +10,41 @@
       name="description"
       content="Think SQLite, but for event sourcing. Append events, react in real-time, and wire up anything—from Arduino sensors to MCP servers—without cloud lock-in."
     >
+
+    <!-- Open Graph Meta Tags -->
+    <meta
+      property="og:title"
+      content="cross.stream - Local-first event streaming for hackers & tinkerers"
+    >
+    <meta
+      property="og:description"
+      content="Think SQLite, but for event sourcing. Append events, react in real-time, and wire up anything—from Arduino sensors to MCP servers—without cloud lock-in."
+    >
+    <meta property="og:image" content="assets/og.png">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+    <meta
+      property="og:image:alt"
+      content="cross.stream - Local-first event streaming platform"
+    >
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://cross.stream">
+
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta
+      name="twitter:title"
+      content="cross.stream - Local-first event streaming for hackers & tinkerers"
+    >
+    <meta
+      name="twitter:description"
+      content="Think SQLite, but for event sourcing. Append events, react in real-time, and wire up anything—from Arduino sensors to MCP servers—without cloud lock-in."
+    >
+    <meta name="twitter:image" content="assets/og.png">
+    <meta
+      name="twitter:image:alt"
+      content="cross.stream - Local-first event streaming platform"
+    >
     <link rel="stylesheet" href="global.css">
     <link rel="stylesheet" href="styles.css">
     <script type="module" src="components/terminal-panel.js"></script>
