--- a/www/index.html
+++ b/www/index.html
@@ -60,22 +60,23 @@
         Local-first event streaming for hackers & tinkerers
       </p>
 
+      <div class="cta-buttons">
+        <a
+          href="https://cablehead.github.io/xs/getting-started/installation/"
+          class="cta-button primary"
+        >Get Started</a>
+        <a
+          href="https://cablehead.github.io/xs/"
+          class="cta-button secondary"
+        >Documentation</a>
+        <a
+          href="https://github.com/cablehead/xs"
+          class="cta-button secondary"
+        >GitHub</a>
+      </div>
+
       <!-- Demo Section: Query + Input/Store -->
       <div class="demo-section">
-        <!-- Query Section -->
-        <div class="query-section">
-          <terminal-panel
-            id="query-terminal"
-            title="Query the Event Store"
-          >
-            <div
-              style="display: flex; flex-direction: column; gap: 0.5em"
-              id="query-output"
-            >
-            </div>
-          </terminal-panel>
-        </div>
-
         <div class="input-store-row">
           <!-- Input commands showing executed commands -->
           <div class="console">
@@ -163,6 +164,20 @@
               </div>
             </terminal-panel>
           </div>
+        </div>
+
+        <!-- Query Section -->
+        <div class="query-section">
+          <terminal-panel
+            id="query-terminal"
+            title="Query the Event Store"
+          >
+            <div
+              style="display: flex; flex-direction: column; gap: 0.5em"
+              id="query-output"
+            >
+            </div>
+          </terminal-panel>
         </div>
       </div>
 
