--- a/www/index.html
+++ b/www/index.html
@@ -20,7 +20,7 @@
       property="og:description"
       content="Think SQLite, but for event sourcing. Append events, react in real-time, and wire up anything—from Arduino sensors to MCP servers—without cloud lock-in."
     >
-    <meta property="og:image" content="assets/og.png">
+    <meta property="og:image" content="https://www.cross.stream/assets/og.png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
     <meta
@@ -40,7 +40,7 @@
       name="twitter:description"
       content="Think SQLite, but for event sourcing. Append events, react in real-time, and wire up anything—from Arduino sensors to MCP servers—without cloud lock-in."
     >
-    <meta name="twitter:image" content="assets/og.png">
+    <meta name="twitter:image" content="https://www.cross.stream/assets/og.png">
     <meta
       name="twitter:image:alt"
       content="cross.stream - Local-first event streaming platform"
